--- a/html/device_test.html
+++ b/html/device_test.html
@@ -31,9 +31,12 @@
                     result = 'pc'
                 }
             }
-
+            alert(result);
         }
-        alert(result);
+
+    $(document).ready(function(){
+        checkDevice();
+    })
     </script>
 </head>
 <body>
