--- a/html/about-us/corporate-profile.html
+++ b/html/about-us/corporate-profile.html
@@ -61,7 +61,7 @@
         <section class="sub_cont sub_img2" data-aos="fade-up" data-aos-delay="300">
             <img src="../../resources/img/sub/img_corporate_bg.jpg" alt="corporate backgroun image" title="corporate backgroun image">
             <div>
-                <p>サムスン物産（韓国）の海外拠点の一つで<br class="mobile" />ある日本にて、70年の長い歴史を誇る、 <br/>化学、鉄鋼、素材、エネルギーなど様々な<br class="mobile" />分野にて未来価値を作り、 <br /><br />グローバル価値を創造する総合商社です。</p>
+                <p>サムスン物産（韓国）の海外拠点の一つで<br class="mobile" />ある日本にて、70年の長い歴史を誇る、 <br/>化学、鉄鋼、素材、エネルギーなど様々な<br class="mobile" />分野にて未来価値を作り、 <br /><br /><b>グローバル価値を創造する総合商社です。</b></p>
             </div>
         </section>
         <section class="sub_cont corporate">
