--- a/html/about-us/our-philosophy.html
+++ b/html/about-us/our-philosophy.html
@@ -116,9 +116,9 @@
             <ul class="item">
                 <li data-aos="fade-up"  data-aos-delay="100">
                     <div class="icon">
-                        <img src="../../resources/img/sub/icon_philosophy1.svg" alt="人材 icon">
+                        <img src="../../resources/img/sub/icon_philosophy1.svg" alt="人材第一 icon">
                     </div>
-                    <b>人材</b>
+                    <b>人材第一</b>
                     <p>「企業は人なり」という信念に基づき、人材を大切にし、<br class="web" />存分に能力を発揮できる場を提供します。</p>
                 </li>
                 <li data-aos="fade-up"  data-aos-delay="300">
@@ -271,7 +271,7 @@
                             <dt>株主価値中心の経営を追求する</dt>
                             <dd>
                                 <ul class="sub_list">
-                                    <li>・透明・正道経営を通じ、利潤を極大化することにより、株主の投資収益増大を積極的に追求する</li>
+                                    <li>透明・正道経営を通じ、利潤を極大化することにより、株主の投資収益増大を積極的に追求する</li>
                                     <li>株主及び利害関係者に対し、財務上の変動事項などの主要な経営情報を、適宜、公正かつ誠実に提供するよう最善を尽くす</li>
                                     <li>株主の正当な要求と提案を尊重し、これらを経営活動に反映させるよう努力する</li>
                                 </ul>
