--- a/html/business/energy.html
+++ b/html/business/energy.html
@@ -84,7 +84,10 @@
                             <li>GGL認証(Green Gold Label)取得 <br />当社は2022年10月にバイオマス燃料の<br class="mobile" />第三者認証であるGGL<br class="web" />認証を<br class="mobile" />取得しました。</li>
                             <li>一般財団法人日本ガス機器検査協会<br class="mobile" />発電利用に供する<br class="web" />木質バイオマスの<br class="mobile" />証明に係る事業社認定 JIA19-012</li>
                         </ul>
-                        <img src="../../resources/img/sub/img_energy_item2.png" alt="energy image" title="energy image"/>
+                        <a href="../../resources/data/Energy_CERTIFICATE.pdf" download>
+                            <img src="../../resources/img/sub/img_energy_item2.png" alt="energy image" title="energy image"/>
+                        </a>
+                        
                     </div>
                 </li>
             </ul> 
