--- a/html/about-us/corporate-profile.html
+++ b/html/about-us/corporate-profile.html
@@ -61,7 +61,11 @@
         <section class="sub_cont sub_img2" data-aos="fade-up" data-aos-delay="300">
             <img src="../../resources/img/sub/img_corporate_bg.jpg" alt="corporate backgroun image" title="corporate backgroun image">
             <div>
-                <p>サムスン物産（韓国）の海外拠点の一つで<br class="mobile" />ある日本にて、70年の長い歴史を誇る、 <br/>化学、鉄鋼、素材、エネルギーなど様々な<br class="mobile" />分野にて未来価値を作り、 <br /><br /><b>グローバル価値を創造する総合商社です。</b></p>
+                <p>サムスン物産（韓国）の海外拠点の<br class="mobile" />一つである日本において<br />
+                    化学・鉄鋼・素材・エネルギーなど<br class="mobile" />様々な分野にて未来価値を作り                    
+                     <br /><br />
+                     <b>グローバル価値を創造する総合商社</b>
+                </p>
             </div>
         </section>
         <section class="sub_cont corporate">
@@ -106,23 +110,11 @@
                 </div>
                 <div class="business_cont">
                     <dl>
-                        <dt>主な業務</dt>
+                        <dt>主な業務および取扱品目</dt>
                         <dd>
-                            <ul class="sub_list">
-                                <li>鉄鋼製品の輸出入</li>
-                            </ul>
-                        </dd>
-                    </dl>
-                    <dl>
-                        <dt>および取扱品目</dt>
-                        <dd>
-                            <ul class="sub_list2">
-                                <li>金属製品の輸出入</li>
-                                <li>基礎化学製品の輸出入</li>
-                                <li>有機‧無機化学製品の輸出入</li>
-                                <li>電子材料の輸出入</li>
-                                <li>再生エネルギー関連機器の輸出入</li>
-                            </ul>
+                            鉄鋼製品、金属製品、基礎化学製品<br />
+                            有機・無機化学製品、電子材料、<br />
+                            再生エネルギー原料などの輸出入
                         </dd>
                     </dl>
                 </div>
