--- a/html/about-us/our-philosophy.html
+++ b/html/about-us/our-philosophy.html
@@ -79,7 +79,7 @@
                     <dd>
                         <ul class="sub_list">
                             <li>人材育成と技術優位の拡大を経営原則とする</li>
-                            <li>人材と技術の調和を通じて経営システム全般でシナジー効果を増大する</li>
+                            <li>人材と技術の調和を通じて経営システム全般で<br class="web" />シナジー効果を増大する</li>
                         </ul>
                     </dd>
                 </dl>
@@ -89,7 +89,9 @@
                     </dt>
                     <dd>
                         <ul class="sub_list">
-                            <li>顧客に最高の満足をもたらす製品とサービスを創出する</li>
+                            <li>顧客に最高の満足をもたらす製品と<br class="web" />
+                                サービスを創出する
+                            </li>
                             <li>業界で世界1位を維持する</li>
                         </ul>
                     </dd>
@@ -140,21 +142,25 @@
                         <img src="../../resources/img/sub/icon_philosophy4.svg" alt="正道経営 icon">
                     </div>
                     <b>正道経営</b>
-                    <p>真っ直ぐな心と正しい行動によって名誉と品位を守り、全てのことにお<br class="web" />いて常に正道を追求します。</p>
+                    <p>真っ直ぐな心と正しい行動によって名誉と品位を守り、<br class="web" />
+                        全てのことにおいて常に正道を追求します。
+                    </p>
                 </li>
                 <li data-aos="fade-up"  data-aos-delay="900">
                     <div class="icon">
                         <img src="../../resources/img/sub/icon_philosophy5.svg" alt="相生追求 icon">
                     </div>
                     <b>相生追求</b>
-                    <p>社会の一員として共に生きていくという心構えで、地域社会、国家、<br class="web" />人類の共同繁栄のために努力します。</p>
+                    <p>社会の一員として共に生きていくという心構えで、<br class="web" />
+                        地域社会、国家、人類の共同繁栄のために努力します。
+                    </p>
                 </li>
             </ul>
         </section>
         <section class="sub_cont philosophy4">
             <div class="text">
                 <b>5大経営原則</b>
-                 <p>Samsungは、世界をリードする企業として<br class="mobile" />の企業の社会的責任に対する意志<br class="web" />を、 <br class="mobile" />「5大経営原則」として <br class="mobile" />2005年に発表しました。 <br />これらは、法的および倫理的な基準に<br class="mobile" />準拠し、企業の社会的責任を<br class="web" />果たすための<br class="mobile" />グローバル行動規範の礎となっています。</p>                
+                 <p>Samsungは、世界をリードする企業として<br class="mobile" />の企業の社会的責任に対する意志を、<br class="web" /> <br class="mobile" />「5大経営原則」として <br class="mobile" />2005年に発表しました。 <br />これらは、法的および倫理的な基準に<br class="mobile" />準拠し、<br class="web" />企業の社会的責任を果たすための<br class="mobile" />グローバル行動規範の礎となっています。</p>                
             </div>
             <div class="division">Samsungの経営理念</div>
             <ul class="accordion">
