--- a/html/about-us/vision.html
+++ b/html/about-us/vision.html
@@ -62,7 +62,10 @@
             <img src="../../resources/img/sub/img_vision_bg.jpg" alt="Vision background image" title="Vision background image" />
             <div>
                 <b>Global Value <br class="mobile">Creating Company</b>
-                <p>トレーディングと環境にやさしい <br class="mobile">事業開発を通して <br class="mobile"> 社会に寄与していきます。</p>
+                <p>トレーディングと環境にやさしい<br class="mobile">
+                    事業開発を通して<br class="mobile">
+                    社会に貢献していきます。
+                </p>
             </div>
         </section>
         <section class="sub_cont vision">
@@ -72,8 +75,13 @@
                     <dt>事業戦略</dt>
                     <dd>
                         <ul class="sub_list">
-                            <li>化学、鉄鋼、素材、エネルギー分野でのValue Chainと機能拡大など事業モデル革新による成長追求</li>
-                            <li>今後の環境変化に対応し、<br>有望分野における新事業創出</li>
+                            <li>化学、鉄鋼、素材、エネルギー分野での<br />
+                                Value Chainと機能拡大など<br />
+                                事業モデル革新による成長追求
+                            </li>
+                            <li>今後の環境変化に対応し、<br />
+                                有望分野における新事業創出
+                            </li>
                         </ul>
                     </dd>
                 </dl> 
@@ -81,7 +89,7 @@
                     <dt>実行体系</dt>
                     <dd>
                         <ul class="sub_list">
-                            <li>産業/機能/地域の専門知識を強化</li>
+                            <li>産業、機能、地域の専門知識を強化</li>
                             <li>効率的で柔軟な組織文化</li>
                             <li>堅実経営のためのリスク管理</li>
                         </ul>
@@ -91,8 +99,12 @@
                     <dt>総合力</dt>
                     <dd>
                         <ul class="sub_list">
-                            <li >人材、取引先、グローバルネットワークなど独自のビジネスインフラ</li>
-                            <li>商品/産業、地域機能に関する様々な知識とノウ<br class="web">ハウ</li>
+                            <li class="fs_13">人材、取引先、グローバルネットワークなど<br />
+                                独自のビジネスインフラ
+                            </li>
+                            <li>商品、産業、地域機能に関する<br />
+                                様々な知識とノウハウ
+                            </li>
                             <li>多様性、柔軟性、創造性で想像力を発揮</li>
                         </ul>
                     </dd>
