--- a/html/index.html
+++ b/html/index.html
@@ -266,6 +266,50 @@
                     <td></td>
                     <td></td>
                 </tr>
+
+                <tr>
+                    <td>Recruit</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>process</td>
+                    <td><a href="/html/recruit/process.html" target="_blank"> /html/recruit/process.html</a></td>
+                    <td><button class=""></button></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>steel</td>
+                    <td><a href="/html/recruit/qna.html" target="_blank"> /html/recruit/qna.html</a></td>
+                    <td><button class=""></button></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+                
+
+                <tr>
+                    <td>Pr</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>chemicals</td>
+                    <td><a href="/html/pr/news.html" target="_blank"> /html/pr/news.html</a></td>
+                    <td><button class=""></button></td>
+                    <td></td>
+                    <td></td>
+                </tr>
             </tbody>
         </table>   
         
