--- a/html/recruit/qna.html
+++ b/html/recruit/qna.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
-    <title>お問い合わせ - サムスンＣ＆Ｔジャパン</title>
+    <title>Q&amp;A - サムスンＣ＆Ｔジャパン</title>
 
     <link rel="apple-touch-icon" href="/resources/img/common/favicon.ico">
     <link rel="icon" href="/resources/img/common/favicon.ico">
@@ -42,43 +42,49 @@
 
     <div class="contents sub">
         <section class="sub_cont sub_title contact" data-aos="fade" data-aos-duration="2000">
-            <div class="breadcrumbs" role="navigation">
-                <ol>
-                    <li>
-                        <a href="../../html/main.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="../../html/about-us/corporate-profile.html">会社情報</a>
-                    </li>
-                    <li>
-                        <a href="../../html/about-us/contact-info1.html">お問い合わせ</a>
-                    </li>
-                </ol>
-            </div>
-            <h2 class="title">お問い合わせ</h2>
-            <span class="sub">Contact Us</span>
-            <p class="explain">
-                サムスンC&Tジャパンの<br class="mobile" />
-                ホームページを訪問していただき<br class="mobile" />
-                ありがとうございます。<br />
-                質問内容を送っていただければ、<br class="mobile" />
-                速やかに回答いたします。
-            </p> 
+            <section class="sub_cont sub_title" data-aos="fade" data-aos-duration="2000">
+                <div class="breadcrumbs" role="navigation">
+                    <ol>
+                        <li>
+                            <a href="../../html/main.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="../../html/recruit/process.html">採用情報</a>
+                        </li>
+                        <li>
+                            <a href="../../html/recruit/qna.html">Q&A</a>
+                        </li>
+                    </ol>
+                </div>
+                <h2 class="title">Q&A</h2>
+                <span class="sub">&nbsp;</span> 
+                <p class="explain">
+                    サムスンC&Tジャパンのホームページを訪問していただきありがとうございます。質問内容を送っていただければ、速やかに回答いたします。
+                </p>
+            </section>
         </section>
         <section class="sub_cont contact" data-aos="fade-up" data-aos-delay="100">
             <p class="c_error_text" style="display: block;">すべて必須入力項目です。</p>
             <div class="form">
                 <div class="item first">
                     <dl>
-                        <dt>お問い合わせ分類</dt>
+                        <dt>関心分野</dt>
                         <dd>
                             <div class="c_radio">
-                                <input type="radio" id="お問い合わせ分類1" name="お問い合わせ分類" checked />
-                                <label for="お問い合わせ分類1" data-name="お問い合わせ分類1">一般的なお問い合わせ</label>
+                                <input type="radio" id="関心分野1" name="関心分野" checked />
+                                <label for="関心分野1">新卒採用</label>
                             </div>
                             <div class="c_radio">
-                                <input type="radio" id="お問い合わせ分類2" name="お問い合わせ分類"/>
-                                <label for="お問い合わせ分類2" data-name="お問い合わせ分類2">事業に関するお問い合わせ</label>
+                                <input type="radio" id="関心分野2" name="関心分野"/>
+                                <label for="関心分野2">経歴採用</label>
+                            </div>
+                            <div class="c_radio">
+                                <input type="radio" id="関心分野3" name="関心分野"/>
+                                <label for="関心分野3">インターン</label>
+                            </div>
+                            <div class="c_radio">
+                                <input type="radio" id="関心分野4" name="関心分野"/>
+                                <label for="関心分野4">その他</label>
                             </div>
                         </dd>
                     </dl>
@@ -104,43 +110,6 @@
                                 </label>
                               </div>
                             <p class="c_error_text" style="display: block;">Error description</p>
-                        </dd>
-                    </dl>
-                    <dl class="job">
-                        <dt>ご職業</dt>
-                        <dd>
-                            <div class="c_radio">
-                                <input type="radio" id="ご職業1" name="ご職業" checked />
-                                <label for="ご職業1">会社員</label>
-                            </div>
-                            <div class="c_radio">
-                                <input type="radio" id="ご職業2" name="ご職業"/>
-                                <label for="ご職業2">自営業</label>
-                            </div>
-                            <div class="c_radio">
-                                <input type="radio" id="ご職業3" name="ご職業"/>
-                                <label for="ご職業3">研究員</label>
-                            </div>
-                            <div class="c_radio">
-                                <input type="radio" id="ご職業4" name="ご職業"/>
-                                <label for="ご職業4">NGO/NFO</label>
-                            </div>
-                            <div class="c_radio">
-                                <input type="radio" id="ご職業5" name="ご職業"/>
-                                <label for="ご職業5">政府機関</label>
-                            </div>
-                            <div class="c_radio">
-                                <input type="radio" id="ご職業6" name="ご職業"/>
-                                <label for="ご職業6">学生</label>
-                            </div>
-                            <div class="c_radio">
-                                <input type="radio" id="ご職業7" name="ご職業"/>
-                                <label for="ご職業7">投資家</label>
-                            </div>
-                            <div class="c_radio">
-                                <input type="radio" id="ご職業8" name="ご職業"/>
-                                <label for="ご職業8">その他</label>
-                            </div>
                         </dd>
                     </dl>
                     <dl>
