--- a/html/about-us/contact-info2.html
+++ b/html/about-us/contact-info2.html
@@ -58,7 +58,11 @@
             <h2 class="title">お問い合わせ</h2>
             <span class="sub">Contact Us</span>
             <p class="explain">
-                サムスンC&Tジャパンのホームページ<br class="mobile" />を訪問していただきありがとうございます。<br />質問内容を送っていただければ、速やかに回答いたします
+                サムスンC&Tジャパンの<br class="mobile" />
+                ホームページを訪問していただき<br class="mobile" />
+                ありがとうございます。<br />
+                質問内容を送っていただければ、<br class="mobile" />
+                速やかに回答いたします。
             </p> 
         </section>
         <section class="sub_cont contact" data-aos="fade-up" data-aos-delay="100">      
@@ -85,19 +89,20 @@
                         <dd class="fd_c">
                             <div class="c_radio">
                                 <input type="radio" id="事業領域1" name="事業領域" checked />
-                                <label for="事業領域1">化学 : メタノール, 石油化学製品、ポリプロピレン等</label>
+                                <label for="事業領域1">化学 : C1ケミカル、機能化学品、無機化学品 等</label>
                             </div>
                             <div class="c_radio">
                                 <input type="radio" id="事業領域2" name="事業領域"/>
-                                <label for="事業領域2">鉄鋼 : 熱延、冷延、ステンレス等</label>
+                                <label for="事業領域2">鉄鋼：薄板、厚板、ステンレス 等</label>
                             </div>
-                            <div class="c_radio">
+                            <div class="c_radio fs_13">
                                 <input type="radio" id="事業領域3" name="事業領域"/>
-                                <label for="事業領域3">電子素材 : Display資材、半導体資材、電子写真材料, 二次電池材料、各種電子材料等</label>
+                                <label for="事業領域3">電子素材 : Display資材、半導体資材、プリンター/複合機資材、 リサイクル金属素材、半導体中古装置 等 
+                                </label>
                             </div>
                             <div class="c_radio">
                                 <input type="radio" id="事業領域4" name="事業領域"/>
-                                <label for="事業領域4">エネルギー : 太陽電池モジュール他</label>
+                                <label for="事業領域4">エネルギー : PKS/Wood pellet 等</label>
                             </div>
                             <div class="c_radio">
                                 <input type="radio" id="事業領域5" name="事業領域"/>
