--- a/html/about-us/history.html
+++ b/html/about-us/history.html
@@ -60,8 +60,16 @@
         </section>
         <section class="sub_cont history1" data-aos="fade-up" data-aos-delay="100">
             <div class="text">
-                <p>サムスングループ初の海外拠点で <br class="mobile" />あるサムスンＣ＆Ｔジャパンは、 <br/>1953年から日本で事業を展開し日本と韓国<br class="mobile" />を結ぶ掛け橋の役割を果たしてきました。 <br />サムスンＣ＆Ｔジャパンは、 <br class="mobile" />この70年間の長い経験を基に事業での力量<br class="mobile" />と役割を強化して<br class="web" />グローバルビジネスの中<br class="mobile" />心拠点となろうとしています。</p></div>
+                <p>サムスングループ初の海外拠点で <br class="mobile" />あるサムスンＣ＆Ｔジャパンは、 <br/>1953年から日本で事業を展開し日本と韓国<br class="mobile" />を結ぶ掛け橋の役割を果たしてきました。 <br />サムスンＣ＆Ｔジャパンは、 <br class="mobile" />この70年間の長い経験を基に事業での力量<br class="mobile" />と役割を強化して<br />グローバルビジネスの中心拠点となろうと<br class="mobile" />しています。</p></div>
             <div class="slide">
+                <div class="slide_item"> 
+                    <div class="slide_img">
+                        <img src="../../resources/img/sub/img_history_slide0.jpg" alt="2023 沿革 image" title="2023 沿革 image">
+                        <span class="num">2023</span>
+                    </div>
+                    
+                    <div class="info">日本での設立70周年023</div>
+                </div>
                 <div class="slide_item"> 
                     <div class="slide_img">
                         <img src="../../resources/img/sub/img_history_slide1.jpg" alt="2003 沿革 image" title="2003 沿革 image">
