--- a/html/about-us/office-locations.html
+++ b/html/about-us/office-locations.html
@@ -64,7 +64,7 @@
                 <p>〒108-0075<br>東京都港区港南二丁目16番4号 <br/>品川グランドセントラルタワー 6階</p>            
                 <p>
                     <b>最寄駅</b>
-                    JR 品川駅 港南口 よりスカイウェイにて直結 徒歩 <br class="mobile" />3 分 <br />京浜急行 品川駅より 徒歩 6 分
+                    JR 品川駅 港南口よりスカイウェイにて<br class="mobile">直結 徒歩 3 分
                 </p>
             </div>
             <img src="../../resources/img/sub/img_locations_bg.jpg" alt="locations background image" title="locations background image" data-aos="fade-up" data-aos-delay="300"/>
