--- a/html/about-us/presidents-message.html
+++ b/html/about-us/presidents-message.html
@@ -60,13 +60,35 @@
         </section>     
         <section class="sub_cont ceo">
             <div class="bg" data-aos="fade-up" data-aos-delay="100">
-                <p>化学、鉄鋼、素材、エネルギーの分野を<br class="web" />中心に積極的に挑戦をしながら事業を展開し、<br class="web" />持続的な成長を目指してまいります。</p>
+                <p>化学、鉄鋼、素材、エネルギーの<br />
+                    分野を中心に積極的に挑戦をしながら<br />
+                    事業を展開し、持続的な成長を<br />
+                    目指してまいります。
+                </p>
             </div>
             <div class="text" data-aos="fade-up" data-aos-delay="300">
                 <p>平素は格別のお引き立てを賜り、誠にありがとうございます。</p>
-                <p>弊社は、1953年に日本での事業を開始して70年以上もの間、「人材と技術をもとに、<br class="web" />最高の製品とサービスを創り出し、人類社会に貢献する。」というSamsungの<br class="web" />経営理念のもと、お客様のニーズに応じ新たな価値を創造し成長してまいりました。</p>
-                <p>現在の事業環境は、地政学的リスクの長期化による経済情勢や金融市場の<br class="web" />不安定さに加え、円安や物価上昇による消費影響が深刻化するなど、<br class="web" />先行きの不透明な状況が続いております。 <br class="web" />このように変わりゆく厳しい環境下においても、化学、鉄鋼、素材、エネルギーの<br class="web" />分野を中心に積極的に挑戦をしながら事業を展開し、持続的な成長を目指して<br class="web" />まいります。</p>
-                <p>役職員一同、OneTeamで、取り組んでまいりますので、<br class="web" />今後とも変わらぬご支援ご鞭撻を賜りたく、宜しくお願い申し上げます。</p>
+                <p>
+                    弊社は、1953年に日本での事業を開始して70年以上もの間、<br class="web" />
+                    「人材と技術をもとに、最高の製品とサービスを創り出し、<br class="web" />
+                    人類社会に貢献する。」というSamsungの経営理念のもと、<br class="web" />
+                    お客様のニーズに応じ新たな価値を創造し成長してまいりました。
+                </p>
+                <p>
+                    現在の事業環境は、地政学的リスクの長期化による経済情勢や<br class="web" />
+                    金融市場の不安定さに加え、円安や物価上昇による消費影響が<br class="web" />
+                    深刻化するなど、先行きの不透明な状況が続いております。
+                </p>
+                <p>
+                    このように変わりゆく厳しい環境下においても、<br class="web" />
+                    化学、鉄鋼、素材、エネルギーの分野を中心に<br class="web" />
+                    積極的に挑戦をしながら事業を展開し、<br class="web" />
+                    持続的な成長を目指してまいります。
+                </p>
+                <p>
+                    役職員一同、OneTeamで、取り組んでまいりますので、<br class="web" />
+                    今後とも変わらぬご支援ご鞭撻を賜りたく、宜しくお願い申し上げます。
+                </p>
             </div>
         </section>
     </div>
