--- a/html/about-us/corporate-profile.html
+++ b/html/about-us/corporate-profile.html
@@ -63,7 +63,7 @@
             <div>
                 <p>サムスン物産（韓国）の海外拠点の<br class="mobile" />一つである日本において<br />
                     化学・鉄鋼・素材・エネルギーなど<br class="mobile" />様々な分野にて未来価値を作り                    
-                     <br /><br />
+                     <br class="mobile" /><br />
                      <b>グローバル価値を創造する総合商社</b>
                 </p>
             </div>
