--- a/html/footer.html
+++ b/html/footer.html
@@ -35,12 +35,12 @@
                 <ul class="depth2">
                     <li><a href="">キャリアガイド</a></li>
                     <li><a href="">カルチャー</a></li>
-                    <li><a href="">採用プロセス</a></li>
-                    <li><a href="">Q&A</a></li>
+                    <li><a href="/html/careers/process.html">採用プロセス</a></li>
+                    <li><a href="/html/careers/qna.html">Q&A</a></li>
                 </ul>
             </li>
             <li class="depth1">
-                <b>PR</b>
+                <b>PR</b> 
                 <ul class="depth2">
                     <li><a href="">ニュース</a></li>
                     <li><a href="">広報資料</a></li>
