--- a/html/header.html
+++ b/html/header.html
@@ -67,8 +67,8 @@
             <ul>
                 <li><a href="">キャリアガイド</a></li>
                 <li><a href="">カルチャー</a></li>
-                <li><a href="">採用プロセス</a></li>
-                <li><a href="">Q&A</a></li>
+                <li><a href="/html/careers/process.html">採用プロセス</a></li>
+                <li><a href="/html/careers/qna.html">Q&A</a></li>
             </ul>
         </div>
         <div data-gnb="5">
@@ -155,8 +155,8 @@
                 <ul class="depth2">
                     <li><a href="">キャリアガイド</a></li>
                     <li><a href="">カルチャー</a></li>
-                    <li><a href="">採用プロセス</a></li>
-                    <li><a href="">Q&A</a></li>
+                    <li><a href="/html/careers/process.html">採用プロセス</a></li>
+                    <li><a href="/html/careers/qna.html">Q&A</a></li>
                 </ul>
             </li>
             <li>
