--- a/html/index.html
+++ b/html/index.html
@@ -131,13 +131,29 @@
             width: 1600px;
             overflow-x: auto;
         }
+        .btn {
+            display: inline-block;
+
+            margin:0 10px 10px 0;
+            padding:8px 15px;
+            font-size: 17px;
+            font-weight: bold;
+            border-radius: 4px;
+            border: 0;
+            background-color: #eee;
+            color: #333;
+        }
+        
     </style>
 </head>
 
 <body>
     <div class="flex">
-        <span>Update : 2024-03-24</span>
-        <h1 class="title">상사부문 동경법인 퍼블리싱</h1>        
+        <span>Update : 2024-03-27</span>
+        <h1 class="title">상사부문 동경법인 일본어 퍼블리싱</h1>        
+
+        <a href="/html/index.html" class="btn">일본어 버전</a>
+        <a href="/html/en/index.html" class="btn bg_pastel_blue">영문 버전</a>
 
         <table class="table">
             <thead>
@@ -230,7 +246,7 @@
                     <td>Business</td>
                     <td></td>
                     <td colspan="4">
-                        section 태그 2개에  페이지 이름이 붙습니다. class명 : chemicals, steel, material, energy
+                        section 태그 2개에  페이지 이름이 붙습니다. class명 : chemicals, steel, material, energy<br />
                         <img src="/resources/img/info_business.jpg" style="max-width: 60%;">
                     </td>
                 </tr>
@@ -268,7 +284,7 @@
                 </tr>
 
                 <tr>
-                    <td>Recruit</td>
+                    <td>Careers</td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -278,16 +294,16 @@
                 <tr>
                     <td></td>
                     <td>process</td>
-                    <td><a href="/html/recruit/process.html" target="_blank"> /html/recruit/process.html</a></td>
-                    <td><button class=""></button></td>
+                    <td><a href="/html/careers/process.html" target="_blank"> /html/careers/process.html</a></td>
+                    <td><button class="b1"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td>steel</td>
-                    <td><a href="/html/recruit/qna.html" target="_blank"> /html/recruit/qna.html</a></td>
-                    <td><button class=""></button></td>
+                    <td>qna</td>
+                    <td><a href="/html/careers/qna.html" target="_blank"> /html/careers/qna.html</a></td>
+                    <td><button class="b1"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -304,7 +320,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td>chemicals</td>
+                    <td>news</td>
                     <td><a href="/html/pr/news.html" target="_blank"> /html/pr/news.html</a></td>
                     <td><button class=""></button></td>
                     <td></td>
