--- a/html/pr/news.html
+++ b/html/pr/news.html
@@ -41,7 +41,7 @@
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont sub_title contact" data-aos="fade" data-aos-duration="2000">
+        <section class="sub_cont sub_title" data-aos="fade" data-aos-duration="2000">
             <div class="breadcrumbs" role="navigation">
                 <ol>
                     <li>
@@ -55,16 +55,16 @@
                     </li>
                 </ol>
             </div>
-            <h2 class="title">サムスン物産 本社 ニュース</h2>
+            <h2 class="title">サムスン物産 本社 ニュ<br class="mobile" />ース</h2>
             <span class="sub">Samsung C&T Corporation Head Office</span>
             <p class="explain">
-                サムスンC&Tジャパンのホームページを訪問していただき
-                ありがとうございます。
+                サムスンC&Tジャパンの<br class="mobile" />ホームページを訪問していただき<br />
+                ありがとうございます。<br />
                 質問内容を送っていただければ、速やかに回答いたします。
             </p> 
         </section>
-        <section class="sub_cont">
-            <div class="item">
+        <section class="sub_cont news">
+            <div class="item on">
                 <p class="text">Head of Hot Rolled Steel Group 
                     wins a Bronze Tower on 
                     the 60th Trade Day</p>
