--- a/html/device_test2.html
+++ b/html/device_test2.html
@@ -7,22 +7,21 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         function checkDevice() {
-var deviceType;
+            var deviceType;
 
-    // User-Agent 문자열을 가져옵니다.
-    var userAgent = navigator.userAgent.toLowerCase();
-
-    // 모바일, 태블릿, PC를 구분합니다.
-    if (/mobile/i.test(userAgent)) {
-        deviceType = 'M';
-    } else if (/tablet/i.test(userAgent) || (/ipad/i.test(userAgent) && !/mobile/i.test(userAgent))) {
-        deviceType = 'T';
-    } else {
-        deviceType = 'P';
-    }
-
-          
-            alert(deviceType);
+            // User-Agent 문자열을 가져옵니다.
+            var userAgent = navigator.userAgent.toLowerCase();
+        
+            // 모바일, 태블릿, PC를 구분합니다.
+            if (/mobile/i.test(userAgent)) {
+                deviceType = 'M';
+            } else if (/tablet/i.test(userAgent) || (/ipad/i.test(userAgent) && !/mobile/i.test(userAgent))) {
+                deviceType = 'T';
+            } else {
+                deviceType = 'P';
+            }          
+            alert(deviceType);            
+            $('#agent').text(userAgent)
         }
 
     $(document).ready(function(){
@@ -32,5 +31,6 @@ var deviceType;
 </head>
 <body>
     <h1>사용 기기는 <span id="device-type"></span>입니다.</h1>
+    <h2>agent <span id="agent"></span></h2>
 </body>
 </html>
