--- a/html/device_test.html
+++ b/html/device_test.html
@@ -32,7 +32,7 @@
                 }
             }
             alert(result);
-            $('#agent').text()
+            $('#agent').text(userAgent)
         }
 
     $(document).ready(function(userAgent){
