--- a/html/device_test.html
+++ b/html/device_test.html
@@ -22,7 +22,7 @@
             
 
             if(mobileRegex.test(userAgent)) {
-                if(userAgent.indexof('mobile') > -1){
+                if(userAgent.indexOf('mobile') > -1){
                     result = '모바일'
                 }else {
                     result = '갤탭'
