--- a/html/device_test.html
+++ b/html/device_test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>모바일 여부 확인3</title>
+    <title>모바일 여부 확인4</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         function isMobile() {
@@ -23,7 +23,7 @@
             // 모바일, 태블릿, PC를 구분합니다.
             if (/mobile/i.test(userAgent) && mobileRegex.test(userAgent)) {
                 deviceType = 'M';
-            } else if (/tablet/i.test(userAgent) ||
+            } else if ((/tablet/i.test(userAgent) ||
                 (/ipad/i.test(userAgent) && !/mobile/i.test(userAgent)) ||
                 (/android/i.test(userAgent) && !/mobile/i.test(userAgent)) ||
                 tabletRegex.test(userAgent)
