--- a/portfolio/html/main.html
+++ b/portfolio/html/main.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="/resources/img/common/favicon.ico">
     <link rel="icon" href="/resources/img/common/favicon.ico">
     <link rel="shortcut icon" href="/resources/img/common/favicon.ico">
-    <link rel="canonical" href="https://trading.samsungcnt.com/main.do" />
+    <link rel="canonical" href="https://ssunakimm.github.io/portfolio/html/main.html" />
     <meta name="keyword" content="퍼블리셔, 웹퍼블리셔" />
     <meta name="description" content="웹퍼블리셔 김선아 포트폴리오 사이트입니다." />
     <meta property="og:title" content="웹퍼블리셔 김선아 포트폴리오" />
@@ -18,19 +18,17 @@
     <meta property="og:keyword" content="퍼블리셔, 웹퍼블리셔" />
     <meta property="og:url" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://cntjapan.xenoid.kr/resources/img/common/meta.jpg" />
     <meta property="og:image:width" content="872">
     <meta property="og:image:height" content="872">
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://cntjapan.xenoid.kr/resources/img/common/meta.jpg" />
-    <link rel="stylesheet" href="/resources/css/style.css" />
-    <link rel="stylesheet" href="/resources/css/aos.css" />
-    <link rel="stylesheet" href="/resources/css/slick.css" />
-    <script src="/resources/js/jquery.min.js"></script>
-    <script src="/resources/js/aos.js"></script>
-    <script src="/resources/js/slick.js"></script>
-    <script src="/resources/js/include.js"></script>
-    <script src="/resources/js/common.js"></script>
+    <link rel="stylesheet" href="./resources/css/style.css" />
+    <link rel="stylesheet" href="./resources/css/aos.css" />
+    <link rel="stylesheet" href="./resources/css/slick.css" />
+    <script src="./resources/js/jquery.min.js"></script>
+    <script src="./resources/js/aos.js"></script>
+    <script src="./resources/js/slick.js"></script>
+    <script src="./resources/js/include.js"></script>
+    <script src="./resources/js/common.js"></script>
 </head>
 
 <body>
